# prekit-data-contracts

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/franzmq/data_contracts/: __init__.py  prekit.py
src/franzmq/data_contracts/prekit/: __init__.py  payload.py
