[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prekit-data-contracts"
version = "0.2.0"
description = "Extension package for franzmq"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Alpamayo", email = "info@alpamayo-solutions.com" }]
dependencies = [
]

# These show up on PyPI
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Topic :: Internet",
  "Topic :: System :: Networking",
]

[project.urls]
Homepage = "https://github.com/alpamayo-solutions/prekit-data-contracts"
Issues = "https://github.com/alpamayo-solutions/prekit-data-contracts/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[project.optional-dependencies]
dev = [
  "build>=1.2.1",
  "twine>=5.0.0",
  "pytest>=8.0",
  "ruff>=0.5.0",
  "black>=24.0",
  "mypy>=1.10",
]